subset generic solution